--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
+    "dayjs": "^1.8.17",
+    "fastclick": "^1.0.6",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "3.0",
     "vuex": "^3.1.2"
   },
@@ -24,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.10"
